# Ai

./: .env.example  PROJECT_ROADMAP.md  README.md  SECURITY.md  main.py  pyproject.toml  run.py  telegram.py
aipro/: __init__.py  app.py  backtest.py  backtest_csv.py  broker.py  commands.py  config.py  controller.py  exchange.py  execution.py  logging_setup.py  market.py  models.py  orders.py  performance.py  readiness.py  reconciliation.py  reliability.py  risk.py  session.py  storage.py  strategy.py
docs/: CLASSICAL_ML_CANDIDATES.md  COMBINED_PAPER_FEATURE_VECTOR.md  CSV_BACKTEST_FORMAT.md  DOMAIN_REGIME_PIPELINES.md  EXCHANGE_ORDER_RECONCILIATION.md  EXECUTION_SIMULATOR_SAFETY.md  FINAL_INTEGRATION_RUNBOOK.md  FRED_MACRO_INTELLIGENCE.md  FULL_BUILD_DIRECTIVE.md  INTELLIGENCE_RESILIENCE.md  LIVE_APPROVAL.md  LIVE_APPROVAL_STATE_MACHINE.md  MARKET_DATA_HEALTH.md  MARKET_FEATURES.md  MODEL_CHAMPION_GOVERNANCE.md  MODEL_GOVERNANCE_SAFETY.md  MODERN_AI_TECHNOLOGY_PLAN.md  NEWS_INTELLIGENCE.md  OPERATIONAL_ADAPTERS.md  OPTIONAL_BOOSTING_BACKENDS.md  ORDER_LIFECYCLE.md  PAPER_CHALLENGER_MONITORING.md  PAPER_CHAMPION_REGISTRY.md  PAPER_GOVERNANCE_APPROVALS.md  PAPER_GOVERNANCE_COMMAND_BOUNDARY.md  PAPER_INTELLIGENCE_FEATURES.md  PAPER_ORDER_RETENTION.md  PAPER_READINESS.md  PAPER_SEQUENCE_MODEL_BACKENDS.md  PAPER_STRATEGY_VALIDATION.md  PURGED_PAPER_TRAINING_RUNNER.md  PURGED_WALK_FORWARD.md  RISK_ADJUSTED_PAPER_SIZING.md  SEC_EDGAR_INTELLIGENCE.md  SNAPSHOT_COMPARISON_RUNNER.md  SNAPSHOT_RECONCILIATION.md  SUPERVISED_PAPER_VALIDATION.md  UPBIT_READONLY_MARKET_DATA.md  (+3 more)
(+126 files in other folders)
